sidebar height fix on smaller devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,7 +12,7 @@
 }
 
 #menu {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #icons {
